--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -5,14 +5,86 @@
     padding: 0;
     margin: 0;
 }
-ol.pokemons li {
+
+.normal {
+    background-color: #a6a877;
+}
+
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.electric {
+    background-color: #f7cf2e;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.fairy {
+    background-color: #f9aec7;
+}
+
+
+.pokemon{
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
     border-radius: 1rem;
-    background-color: #49D0B0;
-    color: white;
 }
 
 .pokemon .number {
@@ -25,6 +97,7 @@ ol.pokemons li {
 .pokemon .name {
     color: white;
     margin-bottom: 0.25rem;
+    text-transform: capitalize;
 }
 
 .pokemon .types {
@@ -47,12 +120,13 @@ ol.pokemons li {
 }
 
 .pokemon .detail .types .type{
-    background-color: #61e1ca;
     color: white;
     padding: .25rem .5rem;
     font-size: .7rem;
     margin: .625rem 0;
     border-radius: 1rem;
+    text-align: center;
+    filter: brightness(1.1);
 }
 
 
