--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -141,6 +141,25 @@ ol.pokemons li img {
     height: 70px;
 }
 
+.pagination{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button{
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    color: white;
+}
+
 @media screen and (min-width: 368px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
