--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,8 +12,9 @@ body {
     height: 100vh;
     width: 100vw;
     padding: 1rem;
-    background-color: rgb(230, 233, 201);
+    background-color: white;
 }
+
 @media screen and (min-width: 992px) {
     .content {
         max-width: auto;
