--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,11 @@
+h1 {
+    font-size: 3em;
+    margin: 0.67em 0;
+    font-family: monospace;
+    margin-left: 10px;
+    text-shadow: 1px 1px 29px rgba(0,0,0,0.66);
+
+}
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
