--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,15 +4,13 @@
 }
 
 body {
-    background-color: white;
-
+    background: #3b4cca;
 }
 
 .content {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
-    padding: 1rem;
-    background-color: white;
+    padding: 2rem;
 }
 
 @media screen and (min-width: 992px) {
